syntax = "proto3";
option go_package = "github.com/guiferpa/jackiechain/proto/net";

package net;

service Net {
  rpc Connect (ConnectRequest) returns (ConnectResponse) {}
  rpc SendConnection (SendConnectionRequest) returns (SendConnectionResponse) {}
}

message ConnectRequest {
  string pid = 1;
  string remote = 2;
}

message ConnectResponse {
  string pid = 1;
  uint32 status = 2;
}

message SendConnectionRequest {
  string pid = 1;
  string remote = 2;
}

message SendConnectionResponse {
  string pid = 1;
  uint32 status = 2;
}
